feat(Tools): 添加变量编辑器 UI
- 新增 VariableEditor 类实现变量编辑器窗口
- 添加滑块和文本输入两种类型的变量编辑控件
- 实现变量值的读取、更新和应用功能
- 在 CMakeLists.txt 中添加 Tools 目录的源文件和头文件
- 为 Windows 平台添加 comctl32、user32 和 gdi32 库的链接

--- a/Backend/CMakeLists.txt
+++ b/Backend/CMakeLists.txt
@@ -46,14 +46,18 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 # 添加源文件
-file(GLOB_RECURSE SOURCES "src/*.cpp" "example/*.cpp" "User/src/*.cpp")
-file(GLOB_RECURSE HEADERS "include/*.h" "include/*.hpp" "User/include/*.h" "User/include/*.hpp")
+file(GLOB_RECURSE SOURCES "src/*.cpp" "example/*.cpp" "User/src/*.cpp" "Tools/src/*.cpp")
+file(GLOB_RECURSE HEADERS "include/*.h" "include/*.hpp" "User/include/*.h" "User/include/*.hpp" "Tools/include/*.h")
 
 # 创建可执行文件
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} User/src/PidController.cpp)
 
 # 添加头文件目录
-target_include_directories(${PROJECT_NAME} PRIVATE include User)
+target_include_directories(${PROJECT_NAME} PRIVATE include User Tools)
 
 # 添加 WinSock2 库
 target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
+
+if(WIN32)
+    target_link_libraries(${PROJECT_NAME} PRIVATE comctl32 user32 gdi32)
+endif()
