feat(Tools): 重写 VariableEditor 使用 ImGui
- 移除原有的 Windows API 相关代码- 集成 ImGui 库以实现更现代的用户界面- 添加新功能：主题切换、实时变量修改
- 优化代码结构，提高可维护性

--- a/Backend/CMakeLists.txt
+++ b/Backend/CMakeLists.txt
@@ -40,6 +40,18 @@ else()
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
 endif()
 
+# ImGui 源文件
+set(IMGUI_DIR ${CMAKE_SOURCE_DIR}/third/imgui)
+set(IMGUI_SOURCES
+        ${IMGUI_DIR}/imgui.cpp
+        ${IMGUI_DIR}/imgui_demo.cpp
+        ${IMGUI_DIR}/imgui_draw.cpp
+        ${IMGUI_DIR}/imgui_tables.cpp
+        ${IMGUI_DIR}/imgui_widgets.cpp
+        ${IMGUI_DIR}/backends/imgui_impl_win32.cpp
+        ${IMGUI_DIR}/backends/imgui_impl_dx11.cpp
+)
+
 # 设置输出目录
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -50,14 +62,31 @@ file(GLOB_RECURSE SOURCES "src/*.cpp" "example/*.cpp" "User/src/*.cpp" "Tools/sr
 file(GLOB_RECURSE HEADERS "include/*.h" "include/*.hpp" "User/include/*.h" "User/include/*.hpp" "Tools/include/*.h")
 
 # 创建可执行文件
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} User/src/PidController.cpp)
+add_executable(${PROJECT_NAME}
+        ${SOURCES}
+        ${HEADERS}
+        User/src/PidController.cpp
+        ${IMGUI_SOURCES}
+)
 
 # 添加头文件目录
-target_include_directories(${PROJECT_NAME} PRIVATE include User Tools)
+target_include_directories(${PROJECT_NAME} PRIVATE
+        include
+        User
+        Tools
+        ${IMGUI_DIR}
+        ${IMGUI_DIR}/backends)
 
 # 添加 WinSock2 库
 target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32)
 
 if(WIN32)
-    target_link_libraries(${PROJECT_NAME} PRIVATE comctl32 user32 gdi32)
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+            d3d11
+            dxgi
+            comctl32
+            ws2_32
+            dwmapi
+            d3dcompiler
+    )
 endif()
