feat(User): 添加调试接口并启动调试线程
- 新增 debug.cpp 和 debug.h 文件，实现调试接口功能
- 在 MotorControl.cpp 中添加 omega_watch 变量用于监控角度反馈
- 更新 main.cpp，启动和停止调试线程- 移除 test.cpp 文件，使用新的调试接口替代原有的 uitest

--- a/Backend/CMakeLists.txt
+++ b/Backend/CMakeLists.txt
@@ -66,6 +66,7 @@ add_executable(${PROJECT_NAME}
         ${SOURCES}
         ${HEADERS}
         User/src/PidController.cpp
+        User/src/debug.cpp
         ${IMGUI_SOURCES}
 )
 
