build: 添加 ASCII 艺术并优化代码
- 在 CMakeLists.txt 中添加 ASCII 艺术字符串函数
- 调整 CMakeLists.txt 开始处调用新函数
- 优化 motor_com.cpp 中的代码，使用 reinterpret_cast
- 更新 motor_com.h 中的构造函数和成员函数声明

--- a/Backend/CMakeLists.txt
+++ b/Backend/CMakeLists.txt
@@ -91,3 +91,24 @@ if(WIN32)
             d3dcompiler
     )
 endif()
+
+# 添加ASCII艺术字符串函数
+function(print_ascii_art)
+    message("    ___         __  __                       _____             __                ")
+    message("   /   | __  __/ /_/ /_  ____  _____   _    / ___/____ _____  / /____  __________")
+    message("  / /| |/ / / / __/ __ \\/ __ \\/ ___/  (_)   \\__ \\/ __ `/ __ \\/ __/ _ \\/ ___/ ___/")
+    message(" / ___ / /_/ / /_/ / / / /_/ / /     _     ___/ / /_/ / / / / /_/  __/ /  / /__  ")
+    message("/_/  |_\\__,_/\\__/_/ /_/\\____/_/     (_)   /____/\\__,_/_/ /_/\\__/\\___/_/   \\___/  ")
+    message("                                                                                 ")
+    message("  ")
+    message("| |  / /__  _____        / __ \\____  ____  (_)___  ____ _                        ")
+    message("| | / / _ \\/ ___/       / /_/ / __ \\/ __ \\/ / __ \\/ __ `/                        ")
+    message("| |/ /  __/ /     _    / ____/ /_/ / /_/ / / /_/ / /_/ /                         ")
+    message("|___/\\___/_/     (_)  /_/    \\____/ .___/_/ .___/\\__,_/                          ")
+    message("                                 /_/     /_/                                      ")
+endfunction()
+
+# 在CMakeLists.txt开始处调用
+print_ascii_art()
+
+# 其余CMake配置保持不变...
